--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
     "react-native": "0.69.6",
-    "react-native-maps": "^1.3.2",
+    "react-native-maps": "0.31.1",
     "react-native-paper": "^4.12.4"
   },
   "devDependencies": {
