--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "@expo-google-fonts/inter": "^0.2.2",
     "@expo-google-fonts/lato": "^0.2.2",
     "@expo-google-fonts/oswald": "^0.2.2",
+    "@expo/vector-icons": "^13.0.0",
+    "@react-navigation/bottom-tabs": "^6.4.0",
+    "@react-navigation/native": "^6.0.13",
     "expo": "~46.0.13",
     "expo-font": "~10.2.0",
     "expo-status-bar": "~1.4.0",
@@ -21,8 +24,9 @@
     "react-native": "0.69.6",
     "react-native-maps": "0.31.1",
     "react-native-paper": "^4.12.4",
-    "styled-components": "^5.3.6",
-    "@expo/vector-icons": "^13.0.0"
+    "react-native-safe-area-context": "4.3.1",
+    "react-native-screens": "~3.15.0",
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
