--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-paper": "^4.12.4",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
+    "react-native-webview": "11.23.0",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
